--- a/styles/cg-core.scss
+++ b/styles/cg-core.scss
@@ -9,13 +9,18 @@
   .link {
     fill: none;
     stroke: #ddd;
-    stroke-width: 0.5px;
+    stroke-width: 1.5px;
     opacity: 1;
     //shape-rendering: crispEdges;
+    //-webkit-transition: stroke 1s;
 
-    &.highlight {
-      stroke: red;
-      stroke-opacity: 1;
-    }
+    //&.highlight {
+    //  stroke: red;
+    //  stroke-opacity: 1;
+    //}
+
+    //&:hover {
+    //  stroke: blue;
+    //}
   }
 }
